data/derived/comb/progs/unify/prog4002.ml.out
Characters 74-90:
  | head::tail -> listReverse tail::head;;
                  ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
